[package]
name = "os"
version = "0.1.0"
authors = ["Jinsheng Zhang <873634676@qq.com>"]
edition = "2018"


[dependencies]
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
buddy_system_allocator = "0.6"
bitflags = "1.2.1"
xmas-elf = "0.7.0"


[features]
default = []
bitmap_allocator = []
linkedlist_allocator = []
stackframe_allocator = []
frame_allocator = []
segment_allocator = []